Refactored code, hopefully no more memory leaks

--- a/stein_is.ipynb
+++ b/stein_is.ipynb
@@ -11,7 +11,9 @@
     "import numpy as np\n",
     "import scipy as sp\n",
     "import tensorflow as tf\n",
-    "import tensorflow.contrib.distributions as ds"
+    "import tensorflow.contrib.distributions as ds\n",
+    "import time\n",
+    "from tensorflow.python.client import timeline"
    ]
   },
   {
@@ -22,6 +24,7 @@
    },
    "outputs": [],
    "source": [
+    "output = '/home/sky/Downloads/stein_is'\n",
     "sess = tf.InteractiveSession()"
    ]
   },
@@ -97,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,14 +124,14 @@
     "        seed = 30\n",
     "        \n",
     "        # Intialisation\n",
-    "        self.B, self.B_density, self.A = self.initialise_variables()\n",
+    "        self.B, self.q_density, self.A = self.initialise_variables()\n",
     "        self.pB = self.gmm_model.log_px(self.B)\n",
     "        \n",
     "        # Register functions for debugging\n",
     "        self.k_A_A, self.sum_grad_A_k_A_A, self.A_Squared, self.h = self.construct_map()\n",
     "        self.k_A_B, self.sum_grad_A_k_A_B = self.apply_map()        \n",
-    "        self.n_A, self.n_B = self.svgd_update()\n",
-    "        # self.q_density = self.density_update()\n",
+    "        self.A, self.B, self.grad_B_phi_B = self.svgd_update()\n",
+    "        self.q_density = self.density_update()\n",
     "        \n",
     "        \n",
     "    def initialise_variables(self):\n",
@@ -144,69 +147,83 @@
     "                             \n",
     "    def construct_map(self):\n",
     "        # Calculate ||leader - leader'||^2/h_0, refer to leader as A as in SteinIS\n",
-    "        x2_A_A_T = 2. * tf.matmul(self.A, tf.transpose(self.A)) # 100 x 100\n",
-    "        A_Squared = tf.reduce_sum(tf.square(self.A), keep_dims=True, axis=1) # 100 x 1\n",
-    "        A_A_Distance_Squared = A_Squared - x2_A_A_T + tf.transpose(A_Squared) # 100 x 100\n",
-    "        h_num = tf.square(median(tf.sqrt(A_A_Distance_Squared)))\n",
-    "        h_dem = 2. * tf.log(tf.to_float(self.n_leaders) + 1.)\n",
-    "        h = tf.stop_gradient(h_num / h_dem)\n",
-    "        k_A_A = tf.exp(-A_A_Distance_Squared / h)\n",
+    "        with tf.variable_scope('k_A_A'):\n",
+    "            x2_A_A_T = 2. * tf.matmul(self.A, tf.transpose(self.A)) # 100 x 100\n",
+    "            A_Squared = tf.reduce_sum(tf.square(self.A), keep_dims=True, axis=1) # 100 x 1\n",
+    "            A_A_Distance_Squared = A_Squared - x2_A_A_T + tf.transpose(A_Squared) # 100 x 100\n",
+    "            h_num = tf.square(median(tf.sqrt(A_A_Distance_Squared)))\n",
+    "            h_dem = 2. * tf.log(tf.to_float(self.n_leaders) + 1.)\n",
+    "            h = tf.stop_gradient(h_num / h_dem)\n",
+    "            k_A_A = tf.exp(-A_A_Distance_Squared / h)\n",
     "        # Can't use vanilla tf.gradients as it sums dy/dx wrt to dx, want sum dy/dx wrt to dy, tf.map_fn is not available\n",
     "        # tf.gradients also do not provide accurate gradients in this case\n",
-    "        sum_grad_A_k_A_A = tf.stack([tf.matmul(tf.reshape(k_A_A[:, i], (1, -1)), -2 * (self.A - self.A[i]) / h) for i in range(self.n_leaders)])\n",
+    "        with tf.variable_scope('sum_grad_A_k_A_A'):    \n",
+    "            sum_grad_A_k_A_A = tf.stack([tf.matmul(tf.reshape(k_A_A[:, i], (1, -1)), -2 * (self.A - self.A[i]) / h) for i in range(self.n_leaders)])\n",
     "        return k_A_A, tf.squeeze(sum_grad_A_k_A_A), A_Squared, h\n",
     "        \n",
     "    def apply_map(self):\n",
     "        # Calculate ||leader - follower||^2/h_0, refer to follower as B as in SteinIS\n",
-    "        x2_A_B_T = 2. * tf.matmul(self.A, tf.transpose(self.B))\n",
-    "        B_Squared = tf.reduce_sum(tf.square(self.B), keep_dims=True, axis=1)\n",
-    "        A_B_Distance_Squared = self.A_Squared - x2_A_B_T + tf.transpose(B_Squared)\n",
-    "        k_A_B = tf.exp(-A_B_Distance_Squared / self.h)\n",
-    "        sum_grad_A_k_A_B = tf.stack([tf.matmul(tf.reshape(k_A_B[:, i], (1, -1)), -2 * (self.A - self.B[i]) / self.h) for i in range(self.n_followers)])\n",
+    "        with tf.variable_scope('k_A_B'):\n",
+    "            x2_A_B_T = 2. * tf.matmul(self.A, tf.transpose(self.B))\n",
+    "            B_Squared = tf.reduce_sum(tf.square(self.B), keep_dims=True, axis=1)\n",
+    "            A_B_Distance_Squared = self.A_Squared - x2_A_B_T + tf.transpose(B_Squared)\n",
+    "            k_A_B = tf.exp(-A_B_Distance_Squared / self.h)\n",
+    "        with tf.variable_scope('sum_grad_A_k_A_B'):\n",
+    "            sum_grad_A_k_A_B = tf.stack([tf.matmul(tf.reshape(k_A_B[:, i], (1, -1)), -2 * (self.A - self.B[i]) / self.h) for i in range(self.n_followers)])\n",
     "        return k_A_B, tf.squeeze(sum_grad_A_k_A_B)\n",
     "                    \n",
     "    def svgd_update(self):\n",
     "        self.k_A_A, self.sum_grad_A_k_A_A, self.A_Squared, self.h = self.construct_map()\n",
     "        self.k_A_B, self.sum_grad_A_k_A_B = self.apply_map()\n",
-    "        self.d_log_pA = self.gmm_model.d_log_px(self.A)\n",
-    "        sum_d_log_pA_T_k_A_A = tf.matmul(self.k_A_A, self.d_log_pA)\n",
-    "        phi_A = (sum_d_log_pA_T_k_A_A + self.sum_grad_A_k_A_A) / self.n_leaders\n",
-    "        A = self.A + self.step_size * phi_A  \n",
-    "        sum_d_log_pA_T_k_A_B = tf.matmul(tf.transpose(self.k_A_B), self.d_log_pA)\n",
-    "        phi_B = (sum_d_log_pA_T_k_A_B + self.sum_grad_A_k_A_B) / self.n_leaders\n",
-    "        B = self.B + self.step_size * phi_B \n",
+    "        with tf.variable_scope('d_log_pA'):\n",
+    "            self.d_log_pA = self.gmm_model.d_log_px(self.A)\n",
+    "        with tf.variable_scope('n_A'):\n",
+    "            sum_d_log_pA_T_k_A_A = tf.matmul(self.k_A_A, self.d_log_pA)\n",
+    "            phi_A = (sum_d_log_pA_T_k_A_A + self.sum_grad_A_k_A_A) / self.n_leaders\n",
+    "            A = self.A + self.step_size * phi_A  \n",
+    "        with tf.variable_scope('n_B'):\n",
+    "            sum_d_log_pA_T_k_A_B = tf.matmul(tf.transpose(self.k_A_B), self.d_log_pA)\n",
+    "            phi_B = (sum_d_log_pA_T_k_A_B + self.sum_grad_A_k_A_B) / self.n_leaders\n",
+    "            B = self.B + self.step_size * phi_B \n",
     "        # See http://mlg.eng.cam.ac.uk/mchutchon/DifferentiatingGPs.pdf\n",
-    "        grad_B_sum_grad_A_k_A_B = []\n",
-    "        for i in range(self.n_followers):\n",
-    "            x = (self.A - self.B[i]) / self.h\n",
-    "            term_2 = tf.matmul(tf.tranpose(x), tf.matmul(tf.diag(k_A_B[:, i]), x))\n",
-    "            term_1 = (tf.reduce_sum(k_A_B[:, i] / self.h) * tf.eye(self.dim)\n",
-    "            grad_B_sum_grad_A_k_A_B.append(4 * (term_1 - term_2))\n",
-    "        return A, B #, grad_B_k_A_B, grad_B_sum_grad_A_k_A_B, grad_B_phi_B_\n",
+    "        with tf.variable_scope('grad_B_phi_B'):\n",
+    "            sum_grad_B_grad_A_k_A_B = []\n",
+    "            for i in range(self.n_followers):\n",
+    "                x = (self.A - self.B[i]) / self.h\n",
+    "                term_1 = tf.reduce_sum(self.k_A_B[:, i]) / (self.h * self.n_leaders) * tf.eye(self.dim)\n",
+    "                term_2 = tf.matmul(tf.transpose(x), tf.matmul(tf.diag(self.k_A_B[:, i]), x))\n",
+    "                sum_grad_B_grad_A_k_A_B.append(4 * (term_1 - term_2))\n",
+    "            sum_d_log_pA_T_grad_A_k_A_B = tf.stack([tf.matmul(tf.transpose(self.d_log_pA), tf.matmul(tf.diag(self.k_A_B[:, i]), 2 * (self.A - self.B[i]) / self.h)) for i in range(self.n_followers)])           \n",
+    "            grad_B_phi_B = (sum_d_log_pA_T_grad_A_k_A_B + tf.stack(sum_grad_B_grad_A_k_A_B)) / self.n_followers\n",
+    "        return A, B, grad_B_phi_B\n",
     "    \n",
     "    def density_update(self):\n",
-    "        I = tf.eye(self.dim)\n",
-    "        inv_abs_det_I_grad_B_phi = tf.map_fn(lambda x: 1./tf.abs(tf.matrix_determinant(I + self.step_size * x)), self.grad_B_phi_B)\n",
-    "        return tf.multiply(self.B_density, inv_abs_det_I_grad_B_phi) \n",
+    "        with tf.variable_scope('density_update'):\n",
+    "            I = tf.eye(self.dim)\n",
+    "            inv_abs_det_I_grad_B_phi_B = tf.map_fn(lambda x: 1./tf.abs(tf.matrix_determinant(I + self.step_size * x)), self.grad_B_phi_B)\n",
+    "            return tf.multiply(self.q_density, inv_abs_det_I_grad_B_phi_B) \n",
     "\n",
     "    def main(self, iteration):\n",
     "        for i in range(1, iteration+1):\n",
+    "            start = time.time()\n",
     "            self.step_size = self.step_size_master * (1. + i) ** (-self.step_size_beta)\n",
-    "            self.A, self.B, self.phi_B, self.grad_B_phi_B = self.svgd_update()\n",
+    "            self.A, self.B, self.grad_B_phi_B = self.svgd_update()\n",
     "            self.q_density = self.density_update()\n",
-    "            if i % 10 == 0:\n",
+    "            if i % 5 == 0:\n",
     "                self.pB = self.gmm_model.log_px(self.B)\n",
     "                self.importance_weights = self.pB / self.q_density\n",
     "                self.normalisation_constant = tf.reduce_sum(self.importance_weights) / self.n_followers\n",
-    "                print 'Iteration ', str(i), ' done'\n",
+    "            print 'Iteration', str(i), 'took', time.time() - start\n",
     "        self.final_B = self.B\n",
     "        return self.normalisation_constant"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# mu = 0.; sigma = 3.; dim = 6; n_leaders = 100; n_followers = 100;\n",
@@ -219,11 +236,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 1 took 11.8373599052\n",
+      "Iteration 2 took 11.0008349419\n",
+      "Iteration 3 took 11.1180849075\n",
+      "Iteration 4 took 11.3895740509\n",
+      "Iteration 5 took 12.422096014\n"
+     ]
+    }
+   ],
    "source": [
-    "[w, x] = sess.run([model.n_A, model.n_B])"
+    "run_options = tf.RunOptions(trace_level=tf.RunOptions.FULL_TRACE)\n",
+    "run_metadata = tf.RunMetadata()        \n",
+    "[w] = sess.run([model.main(5)], options=run_options, run_metadata=run_metadata)\n",
+    "tl = timeline.Timeline(run_metadata.step_stats)\n",
+    "ctf = tl.generate_chrome_trace_format()\n",
+    "with open(output + '/timeline.json', 'w') as f:\n",
+    "    f.write(ctf)"
    ]
   },
   {
@@ -258,22 +293,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "((100, 2), (200, 2))"
+       "-0.11503564"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "w.shape, x.shape"
+    "w"
    ]
   },
   {
