Check convergence on single Gaussin and variance

--- a/gmm_tensor.ipynb
+++ b/gmm_tensor.ipynb
@@ -32,20 +32,37 @@
     "        self.weights = weights\n",
     "        self.dim = dim\n",
     "        \n",
-    "    def log_px(self, x, y):\n",
+    "        distributions = []\n",
+    "        for i in range(weights.shape[0]):\n",
+    "            mu_, sigma_ = self.mu[i] * np.ones(dim), self.sigma[i] * np.ones(dim)\n",
+    "            mvnd_i = tf.contrib.distributions.MultivariateNormalDiag(mu_, sigma_)\n",
+    "            distributions.append(mvnd_i)\n",
+    "        self.gauss_mix = tf.contrib.distributions.Mixture(tf.contrib.distributions.Categorical(probs=self.weights), distributions)    \n",
+    "              \n",
+    "#         self.x = tf.placeholder(tf.float64, [None, self.dim])\n",
+    "        \n",
+    "#         self.log_px()\n",
+    "            \n",
+    "    def log_px(self):\n",
     "        # log_px = log(sum(exp(log(w_i) + log(p_i(x)))))\n",
-    "        log_px, log_py = [], []\n",
+    "        log_px = []\n",
     "        for i in range(weights.shape[0]):\n",
     "            mu_, sigma_ = self.mu[i] * np.ones(dim), self.sigma[i] * np.ones(dim)\n",
     "            mvn = ds.MultivariateNormalDiag(loc=mu_, scale_diag=sigma_)\n",
     "            # Calculate log_px for each component\n",
-    "            log_px_i = tf.reduce_logsumexp(mvn.log_prob(x)) + tf.log(weights[i])\n",
-    "            log_py_i = tf.reduce_logsumexp(mvn.log_prob(y)) + tf.log(weights[i])\n",
-    "            log_px.append(log_px_i)\n",
-    "            log_py.append(log_py_i)\n",
-    "        return tf.reduce_logsumexp(log_px), tf.reduce_logsumexp(log_py)\n",
+    "            log_px_i = mvn.log_prob(self.x) + tf.log(weights[i])\n",
+    "            if i == 0:\n",
+    "                log_px = tf.reshape(log_px_i, [-1, 1])\n",
+    "            else:\n",
+    "                log_px = tf.concat([log_px, tf.reshape(log_px_i, [-1, 1])], axis=1)\n",
+    "        self.grad = tf.gradients(tf.reduce_logsumexp(log_px, axis=1), [self.x])\n",
+    "        return self.grad\n",
     "    \n",
-    "    def d_log_px(self, x, y):\n",
+    "    def log_px_(self, x):\n",
+    "        y = tf.convert_to_tensor(x)\n",
+    "        return self.gauss_mix.log_prob(y)\n",
+    "       \n",
+    "    def d_log_px(self, x):\n",
     "        # d_log_px = 1 / exp(log(sum(exp(log(w_i) + log(p_i(x)))))) \n",
     "        #            * sum(exp(log(w_i) + log(p_i(x)) + log(-(x - mu)/sigma^2)))\n",
     "        # Use symbolic differentiation instead\n",
@@ -69,8 +86,15 @@
     "        numerator = tf.reduce_logsumexp(log_numerator, axis=1)\n",
     "        return log_numerator\n",
     "        '''\n",
-    "        log_px, log_py = self.log_px(x, y)\n",
-    "        return tf.gradients(log_px, [self.x]), tf.gradients(log_py, [self.y])"
+    "        log_px = self.log_px(x)\n",
+    "        return tf.gradients(log_px, x)\n",
+    "    \n",
+    "    def d_log_px_(self, x):\n",
+    "        # d_log_px = 1 / exp(log(sum(exp(log(w_i) + log(p_i(x)))))) \n",
+    "        #            * sum(exp(log(w_i) + log(p_i(x)) + log(-(x - mu)/sigma^2)))\n",
+    "        # Use symbolic differentiation instead\n",
+    "        y = tf.convert_to_tensor(x)\n",
+    "        return tf.gradients(self.gauss_mix.log_prob(y), [y])"
    ]
   },
   {
@@ -89,42 +113,89 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]\n",
+      " [-0.1 -0.1 -0.1 -0.1 -0.1 -0.1]]\n"
+     ]
+    }
+   ],
    "source": [
-    "x = -0.1 * np.ones((10, 6)).astype(np.float64)"
+    "x = -0.1 * np.ones((10, 6)).astype(np.float64)\n",
+    "print x"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "-33.701830290660368"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "sess.run(gmm.log_px, feed_dict={gmm.x: x})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# sess.run(gmm.grad, feed_dict={gmm.x: x})[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# x, y = sess.run([gmm.d_log_px(x), gmm.d_log_px_(x)])\n",
+    "x = sess.run(gmm.d_log_px_(x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[array([[ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814],\n",
+      "       [ 10.99788814,  10.99788814,  10.99788814,  10.99788814,\n",
+      "         10.99788814,  10.99788814]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print x\n",
+    "# print y"
+   ]
   }
  ],
  "metadata": {
